@@ -1,46 +1,55 @@
 # PEERSIM EXAMPLE 3
 random.seed 1234567890
 simulation.cycles 200
-#control.0 peersim.cdsim.Shuffle
+#control.shf peersim.cdsim.Shuffle
 
 network.size 250
 
-# Comment the following 2 lines and uncomment the other next to switch between
-# newscast and static topology:
-protocol.0 example.newscast.SimpleNewscast
-protocol.0.cache 20
-#protocol.0 peersim.core.IdleProtocol
+# newscast topology:
+protocol.ncast example.newscast.SimpleNewscast
+protocol.ncast.cache 20
 
-protocol.1 example.loadbalance.AvgBalance
-#protocol.1 example.loadbalance.BasicBalance
-protocol.1.linkable 0
-protocol.1.quota 100
+protocol.avgbal example.loadbalance.AvgBalance
+protocol.avgbal.linkable ncast
+protocol.avgbal.quota 100
+
+protocol.basicbal example.loadbalance.BasicBalance
+protocol.basicbal.linkable ncast
+protocol.basicbal.quota 100
 
 # Monitors the load distribution convergence
-control.1 example.loadbalance.LBObserver
-control.1.protocol 1
-control.1.show_values
+# if you change balancing algorithm remember to change the protocol parameter value
+control.lbo example.loadbalance.LBObserver
+control.lbo.protocol basicbal
+control.lbo.show_values
 
-control.2 example.loadbalance.QuotaObserver
-control.2.protocol 1
+# if you change balancing algorithm remember to change the protocol parameter value
+control.qo example.loadbalance.QuotaObserver
+control.qo.protocol basicbal
 
-init.rnd WireKOut
-init.rnd.protocol 0
+init.rnd peersim.dynamics.WireKOut
+init.rnd.protocol ncast
 init.rnd.k 20
 
+# if you change balancing algorithm remember to change the protocol parameter value
 init.peak example.aggregation.PeakDistributionInitializer
 init.peak.value 10000
-init.peak.protocol 1
+init.peak.protocol basicbal
 
-init.lin LinearDistribution
-init.lin.protocol 1
+# if you change balancing algorithm remember to change the protocol parameter value
+init.lin peersim.vector.LinearDistribution
+init.lin.protocol basicbal
 init.lin.max 100
 init.lin.min 1
 
 # you can replace peak by lin to run the linear initialization instead
 include.init rnd peak
 
+# you can replace basicbal by avgbal to change balancing strategy instead
+include.protocol ncast basicbal
+
+# if you change balancing algorithm remember to change the protocol parameter value
 control.3 example.loadbalance.ResetQuota
-control.3.protocol 1
+control.3.protocol basicbal
 
 
